Allow MediaRecorder to record Muted streams

This CL tries to address the bug by letting MediaRecorder to start recording
even when the incoming stream is muted.
BUG=611205

Review-Url: https://codereview.chromium.org/1971533005
Cr-Commit-Position: refs/heads/master@{#393093}

Former-commit-id: 21a24223a6f5713de7b5cc162bade97c464ad8c4